criado script de build e start

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "scripts": {
     "dev": "next dev"
+    "build": "next build"
+    "start": "next start"
   },
   "keywords": [],
   "author": "",
