--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "next dev"
-    "build": "next build"
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start"
   },
   "keywords": [],
